fix: visible instead of auto (oops...)
Ah man, how did this happen :(

--- a/src/plugins/widgets/tallyCounter/TallyCounter.sass
+++ b/src/plugins/widgets/tallyCounter/TallyCounter.sass
@@ -36,4 +36,4 @@
   &:hover
     .reset-btn
       opacity: 1
-      visibility: auto
+      visibility: visible
